<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp" app:layout_constraintVertical_bias="1.0"
    >
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/L1">
            <TextView
                    android:text="@string/Date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/textView1" android:layout_weight="1"
                    android:textSize="24sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:id="@+id/editText1" android:layout_weight="1" android:inputType="date"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/L2">
            <TextView
                    android:text="@string/sugar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/textView2" android:layout_weight="1"
                    android:textSize="24sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:id="@+id/editText2" android:layout_weight="1" android:inputType="number|numberDecimal"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/L3">
            <TextView
                    android:text="@string/record"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/textView3" android:layout_weight="1"
                    android:textSize="24sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/editText3" android:layout_weight="1"/>
        </LinearLayout>
        <Button
                android:text="@string/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button"/>
        <Button
                android:text="@string/viewData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button2"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>